.provarCaches/00D5f000005vwGkEAI/objects/rstk__soshipments__c.object
<CustomObject>
    <description>soshipments__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soshipments_custno__r.rstk__socust_custno__c + &apos; &apos; +  rstk__soshipments_prod__r.rstk__soprod_prod__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_application__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_custno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>socust_custno_soshipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_discpct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_invline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_invoice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_order__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_origshipper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Shipment Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_origshipyear__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Shipment Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_prod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>soprod_prod_soshipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>Sales_Order_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_qtyorder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_shipamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_shipper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_shipprd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_shipyear__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_soinvline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>rstk__soinvline__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>soshipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>Sales_Order_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_soshipline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>soshipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipments_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Shipments</relationshipLabel>
        <relationshipName>syusr_user_soshipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Shipments</label>
    <nameField>
        <label>Sales Order Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>